# prices_scrapper_teg

./: .gitignore  README.md  config.py  initial_data.parquet  main.py  orchestator.py  pyproject.toml  requirements.txt  shared_context.py
dashboard_app/: app.py  common.py  filters.py
dashboard_app/pages/: __init__.py  configurator.py  login.py  model_analysis.py  plots.py  price_intelligence.py  product_table.py
data_analysis/: analyzer.py
data_processor/: __init__.py  data_preprocessor.py  utils.py
database_manager/: __init__.py  db_manager.py
model/: products_with_predictions.csv
scraper/: scraper.py  webdriver_manager.py
scraper/scrapers/: __init__.py  base.py  kalea.py  kromi.py  tuzonamarket.py
